--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.7.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
